--- a/Host/ServiceHost.csproj
+++ b/Host/ServiceHost.csproj
@@ -54,13 +54,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataContracts.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
     <Compile Include="ICloudService.cs" />
     <Compile Include="Services\Decrementer.cs" />
     <Compile Include="Gateway.cs" />
     <Compile Include="Host.cs" />
     <Compile Include="Services\IDecrementer.cs" />
-    <Compile Include="IGateway.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IIncrementer.cs" />
